[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gu_funclib"
version = "1.8.3"
description = "GU Functions Library"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Alexander Guryev", email = "alexguryev@gmail.com" }
]

[project.urls]
Homepage = "https://alexguryev.com"
Repository = "https://github.com/alexguryev/gu_funclib"
