[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gu_funclib"
version = "1.9.0"
description = "GU Functions Library"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Alexander Guryev", email = "alexguryev@gmail.com" }
]

[project.urls]
Homepage = "https://alexguryev.com"
Repository = "https://github.com/alexguryev/gu_funclib"
